# TankBot

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  main.py  调参.txt
cpp/: minimax  minimax.cpp
data/: CMakeCache.txt  Makefile  cmake_install.cmake  libTank_minimax_lib.dylib
src/: Field.hpp  Field_info.cpp  Field_info.h  Field_map.cpp  Field_map.h  Game.hpp  Game_mcts.cpp  Game_minimax.cpp  Game_mix.cpp  IO_handler.hpp  MCTS_player.hpp  Minimax_players.hpp  anneal.cpp  annealing.cpp  def.hpp  main.cpp
